Add types in forall and substitutions

--- a/src/Language/Lambda/Syntax/Doc.txt
+++ b/src/Language/Lambda/Syntax/Doc.txt
@@ -58,8 +58,12 @@ All other symbols are terminals.
   |  |  **|**  | //Term// ``,`` //[Term]//
   | //ScopedTerm// | -> | //Term//
   | //Pattern// | -> | //VarIdent//
-  | //MetaSubst// | -> | //MetaVarIdent// ``[`` //[VarIdent]// ``]`` ``↦`` //ScopedTerm//
-  | //UnificationConstraint// | -> | ``∀`` //[VarIdent]// ``.`` //ScopedTerm// ``=`` //ScopedTerm//
+  | //Binder// | -> | //VarIdent// ``:`` //Type//
+  | //[Binder]// | -> | **eps**
+  |  |  **|**  | //Binder//
+  |  |  **|**  | //Binder// ``,`` //[Binder]//
+  | //MetaSubst// | -> | //MetaVarIdent// ``[`` //[Binder]// ``]`` ``↦`` //ScopedTerm//
+  | //UnificationConstraint// | -> | ``∀`` //[Binder]// ``.`` //ScopedTerm// ``=`` //ScopedTerm//
   | //[VarIdent]// | -> | **eps**
   |  |  **|**  | //VarIdent//
   |  |  **|**  | //VarIdent// ``,`` //[VarIdent]//
